--- a/serverless.yml
+++ b/serverless.yml
@@ -43,3 +43,10 @@ functions:
           method: get
   blog-indexer:
     handler: bin/blog_indexer
+  blogindex:
+    handler: bin/blogindex
+    events:
+      - http:
+          path: blog/index
+          method: get
+  
