Fix CORS. Will refactor the response functions later

--- a/serverless.yml
+++ b/serverless.yml
@@ -41,6 +41,7 @@ functions:
       - http:
           path: blog
           method: get
+          cors: true
   blog-indexer:
     handler: bin/blog_indexer
   blogindex:
@@ -49,4 +50,4 @@ functions:
       - http:
           path: blog/index
           method: get
-  
+          cors: true
